--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ca.assignment1</groupId>
-    <artifactId>Assignment1</artifactId>
+    <groupId>com.student</groupId>
+    <artifactId>Student</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Assignment1</name>
+    <name>Student</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -64,8 +64,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>ca.assignment1.assignment1/ca.assignment1.assignment1.HelloApplication
-                            </mainClass>
+                            <mainClass>com.student.student/com.student.student.lmsApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
